vaultwarden/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: default
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: 
      app.kubernetes.io/name: vaultwarden
  template:
    metadata:
        labels:
          app.kubernetes.io/name: vaultwarden
    spec:
      containers:
        - image: vaultwarden/server:1.29.1
          name: vaultwarden
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          nfs:
            server: 10.0.3.3
            path: "/mnt/storage/service/vaultwarden"
