vaultwarden/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  vaultwarden
  namespace: default
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    protocol: TCP
